# eloader

./: .gitignore  APACHE_LICENSE  Cargo.toml  MIT_LICENSE  README.md
assets/: .$explain.drawio.bkp  explain.drawio
eloader/: Cargo.toml
eloader/src/: container.rs  error.rs  lib.rs
examples/extension/ext0/: Cargo.toml
examples/extension/ext0/src/: lib.rs
examples/extension/ext1/: Cargo.toml
examples/extension/ext2/: Cargo.toml
examples/extension/ext2/src/: lib.rs
examples/loader/: Cargo.toml
examples/loader/src/: context.rs  error.rs  extension.rs  lib.rs  main.rs
src/: container.rs  lib.rs
