[workspace]
    members = [
        "eloader",

        "examples/loader",
        "examples/extension/ext0",
        "examples/extension/ext1",
    ]
    resolver = "2"

[workspace.dependencies]
    abi_stable = "0.11"
    env_logger = "0.11"
    log = "0"
    thiserror = "1.0"
    walkdir = "2.5"

    eloader = { path = "eloader" }
    loader = { path = "examples/loader" }
