[package]
    authors = ["KrysztalHuang <krysztal.huang@outlook.com>"]
    edition = "2021"
    name = "loader"
    publish = false
    version = "0.1.0"

[dependencies]
    abi_stable = { workspace = true }
    eloader = { workspace = true }
    env_logger = { workspace = true }
    log = { workspace = true }
    thiserror = { workspace = true }
    walkdir = { workspace = true }
